--- a/Exercise3/1517-sep-2024-A01-exercise3-tima003/BookWebApp/Components/Layout/MainLayout.razor
+++ b/Exercise3/1517-sep-2024-A01-exercise3-tima003/BookWebApp/Components/Layout/MainLayout.razor
@@ -14,7 +14,7 @@
             @Body
         </article>
         <footer style="text-align: center;">
-            ©Copyright educational purposes. Fatima Khalif, Don Welch, A01
+            ©Copyright educational purposes. Fatima khalif, Don Welch, A01
         </footer>
 
     </main>
