--- a/Exercise3/1517-sep-2024-A01-exercise3-tima003/BookWebApp/Components/Pages/ReviewCollections.razor
+++ b/Exercise3/1517-sep-2024-A01-exercise3-tima003/BookWebApp/Components/Pages/ReviewCollections.razor
@@ -38,7 +38,7 @@
 }
 
 <fieldset>
-    <legend>Review Data</legend>
+    <legend>Book Details</legend>
 
     <div class="row">
         <div class="col-md-2">
@@ -75,6 +75,10 @@
         </div>
     </div>
     <br />
+</fieldset>
+<fieldset>
+
+    <legend>Reviewer Name</legend>
 
     <div class="row">
         <div class="col-md-2">
