--- a/Exercise3/1517-sep-2024-A01-exercise3-tima003/BookWebApp/Components/Layout/NavMenu.razor
+++ b/Exercise3/1517-sep-2024-A01-exercise3-tima003/BookWebApp/Components/Layout/NavMenu.razor
@@ -1,9 +1,11 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">BookWebApp</a>
+        <a class="navbar-brand" href="">
+            <img src="img/book.jpeg" alt="Books left opened" style="width:40px;height:40px;" />
+            BookWebApp
+        </a>
     </div>
 </div>
-
 <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
 
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
